implicit_input_mode_Select

--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -61,7 +61,7 @@
         </td>
 
         <th scope="row">implicit_input_mode</th>
-        <td>
+        <td colspan="3">
           <select id="implicit_input_mode_Select">
             <option value="0">IMPLICIT_INPUT__NONE___OUTPUT__AS_NORMAL</option>
             <option value="1">IMPLICIT_INPUT__NONE___OUTPUT__AS_INPUT_VALUE_RANGE</option>
