--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -63,12 +63,12 @@
         <th scope="row">implicit_input_mode</th>
         <td colspan="3">
           <select id="implicit_input_mode_Select">
-            <option value="0">IMPLICIT_INPUT__NONE___OUTPUT__AS_NORMAL</option>
-            <option value="1">IMPLICIT_INPUT__NONE___OUTPUT__AS_INPUT_VALUE_RANGE</option>
-            <option value="2">IMPLICIT_INPUT__FILL_ALIGNMENT_MARK___OUTPUT__AS_NORMAL</option>
-            <option value="3">IMPLICIT_INPUT__FILL_ALIGNMENT_MARK___OUTPUT__AS_INPUT_VALUE_RANGE</option>
-            <option value="4">IMPLICIT_INPUT__FILL_PRREVIOUS_TIME_OUTPUT</option>
-            <option value="5" selected>IMPLICIT_INPUT__FILL_ALIGNMENT_MARK__FILL_PRREVIOUS_TIME_OUTPUT</option>
+            <option value="0">IMPLICIT_INPUT__NONE___OUTPUT__AS_NORMAL(0)</option>
+            <option value="1">IMPLICIT_INPUT__NONE___OUTPUT__AS_INPUT_VALUE_RANGE(1)</option>
+            <option value="2">IMPLICIT_INPUT__FILL_ALIGNMENT_MARK___OUTPUT__AS_NORMAL(2)</option>
+            <option value="3">IMPLICIT_INPUT__FILL_ALIGNMENT_MARK___OUTPUT__AS_INPUT_VALUE_RANGE(3)</option>
+            <option value="4">IMPLICIT_INPUT__FILL_PRREVIOUS_TIME_OUTPUT(4)</option>
+            <option value="5" selected>IMPLICIT_INPUT__FILL_ALIGNMENT_MARK__FILL_PRREVIOUS_TIME_OUTPUT(5)</option>
           </select>
         </td>
 
