--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -18,17 +18,17 @@
 
         <th scope="row">explicit_input_height</th>
         <td>
-          <input id="explicit_input_height_Text" type="text" maxlength="5" size="5" value="72"/>
+          <input id="explicit_input_height_Number" type="number" min="1" max="10240" value="72"/>
         </td>
 
         <th scope="row">explicit_input_width</th>
         <td>
-          <input id="explicit_input_width_Text" type="text" maxlength="5" size="5" value="128"/>
+          <input id="explicit_input_width_Number" type="number" min="1" max="10240" value="128"/>
         </td>
 
         <th scope="row">explicit_input_channelCount</th>
         <td>
-          <input id="explicit_input_channelCount_Text" type="text" maxlength="3" size="3" value="4"/>
+          <input id="explicit_input_channelCount_Number" type="number" min="1" max="10240" value="4"/>
         </td>
   
       </tr>
