--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -35,20 +35,20 @@
       
       <tr>
 
-        <th scope="row">vocabularyChannelCount (>= 2) </th>
+        <th scope="row">vocabularyChannelCount (>= 2)</th>
         <td>
-          <input id="vocabularyChannelCount_Text" type="text" maxlength="3" size="3" value="4"/>
+          <input id="vocabularyChannelCount_Number" type="number" min="2" max="1024" value="4"/>
           <!-- 8 -->
         </td>
 
-        <th scope="row">vocabularyCountPerInputChannel (>= 2) </th>
+        <th scope="row">vocabularyCountPerInputChannel</th>
         <td>
-          <input id="vocabularyCountPerInputChannel_Text" type="text" maxlength="6" size="6" value="256"/>
+          <input id="vocabularyCountPerInputChannel_Number" type="number" min="1" max="16777216" value="256"/>
         </td>
 
-        <th scope="row">blockCountTotalRequested (>= 2) </th>
+        <th scope="row">blockCountTotalRequested (>= 2)</th>
         <td>
-          <input id="blockCountTotalRequested_Text" type="text" maxlength="4" size="4" value="39"/>
+          <input id="blockCountTotalRequested_Number" type="number" min="2" max="10240" value="39"/>
         </td>
 
       </tr>
