output_channelCount_Number

--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -57,7 +57,7 @@
     
         <th scope="row">output_channelCount</th>
         <td>
-          <input id="output_channelCount_Text" type="text" maxlength="4" size="4" value="64"/>
+          <input id="output_channelCount_Number" type="number" min="1" max="10240" value="64"/>
         </td>
 
         <th scope="row">implicit_input_mode</th>
