--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -18,17 +18,17 @@
 
         <th scope="row">explicit_input_height</th>
         <td>
-          <input id="explicit_input_height_Number" type="number" min="1" max="10240" value="72"/>
+          <input id="explicit_input_height_Number" type="number" value="72"/>
         </td>
 
         <th scope="row">explicit_input_width</th>
         <td>
-          <input id="explicit_input_width_Number" type="number" min="1" max="10240" value="128"/>
+          <input id="explicit_input_width_Number" type="number" value="128"/>
         </td>
 
         <th scope="row">explicit_input_channelCount</th>
         <td>
-          <input id="explicit_input_channelCount_Number" type="number" min="1" max="10240" value="4"/>
+          <input id="explicit_input_channelCount_Number" type="number" value="4"/>
         </td>
   
       </tr>
@@ -37,18 +37,18 @@
 
         <th scope="row">vocabularyChannelCount (>= 2)</th>
         <td>
-          <input id="vocabularyChannelCount_Number" type="number" min="2" max="1024" value="4"/>
+          <input id="vocabularyChannelCount_Number" type="number" value="4"/>
           <!-- 8 -->
         </td>
 
         <th scope="row">vocabularyCountPerInputChannel</th>
         <td>
-          <input id="vocabularyCountPerInputChannel_Number" type="number" min="1" max="16777216" value="256"/>
+          <input id="vocabularyCountPerInputChannel_Number" type="number" value="256"/>
         </td>
 
         <th scope="row">blockCountTotalRequested (>= 2)</th>
         <td>
-          <input id="blockCountTotalRequested_Number" type="number" min="2" max="10240" value="39"/>
+          <input id="blockCountTotalRequested_Number" type="number" value="39"/>
         </td>
 
       </tr>
@@ -57,7 +57,7 @@
     
         <th scope="row">output_channelCount</th>
         <td>
-          <input id="output_channelCount_Number" type="number" min="1" max="10240" value="64"/>
+          <input id="output_channelCount_Number" type="number" value="64"/>
         </td>
 
         <th scope="row">implicit_input_mode</th>
